--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.15",
+    "@ginkgo-bioworks/react-json-schema-form-builder": "^2.5.0",
     "@rjsf/material-ui": "^3.0.0",
     "apexcharts": "3.26.0",
     "baseui": "^9.112.0",
@@ -20,7 +21,6 @@
     "react-hook-form": "6.15.5",
     "react-icons": "^4.2.0",
     "react-image": "^4.0.3",
-    "react-jsonschema-form-builder": "^1.1.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
