--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@apollo/client": "^3.3.15",
     "@ginkgo-bioworks/react-json-schema-form-builder": "^2.5.0",
-    "@rjsf/material-ui": "^3.0.0",
     "apexcharts": "3.26.0",
     "baseui": "^9.112.0",
+    "bootstrap": "^4.6.0",
     "dayjs": "^1.10.4",
     "formik": "^2.2.6",
     "graphql": "^15.5.0",
